# async_frame

./: CMakeLists.txt  README.md  package.xml  testThreadPool.cpp
async_frame/: CMakeLists.txt
async_frame/include/inferer/: AsyncInferer.h
async_frame/include/inferer/preset/: InferBase.h  TrtInfer.h  VinoInfer.h
async_frame/include/threadPool/: common.h  threadPool.h
async_frame/src/inferer/preset/: TrtInfer.cpp  VinoInfer.cpp
cmake/: FindTensorRT.cmake
cross_platform/: CMakeLists.txt  main.cpp
cross_platform/cmake/: crossConfig.cmake.in
include/: AsyncInferFrame.hpp
include/inferer/: AsyncInferer.h  common.hpp
include/inferer/preset/: InferBase.h  TrtInfer.h  VinoInfer.h  ppp.h
include/threadPool/: ThreadPool.h  common.h  memBlock.h  staticThreadPool.h  threadPool.h
src/: test.cpp
src/inferer/: AsyncInferer.cpp
src/inferer/preset/: TrtInfer.cpp  VinoInfer.cpp
src/threadPool/: ThreadPool.cpp  staticThreadPool.cpp  threadPool.cpp
